--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.22.0
   firebase_auth: ^4.14.0
   google_sign_in: ^6.1.6
+  flutter_signin_button: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +57,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+  - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
